# EduFlow

./: .coverage  .coveragerc  .env.example  .flake8  .gitignore  Makefile  README.md  manage.py  pyproject.toml  requirements.txt
courses/: api_urls.py
eduflow/: asgi.py  celery.py  settings.py  urls.py
materials/: admin.py  api_urls.py  apps.py  models.py  paginators.py  serializers.py  tests.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_video_url.py  0003_course_price.py
templates/emails/: course_update_notification.html  welcome_email.html
users/: admin.py  api_urls.py  filters.py  jwt_urls.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  views.py
users/management/commands/: create_moderators_group.py  deactivate_inactive_users.py  fill_payments.py  init_celery_beat.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_subscription.py  0004_alter_subscription_options_and_more.py  0005_alter_subscription_options.py  0006_alter_payments_options_payments_payment_status_and_more.py
users/services/: stripe_service.py
