[tool.poetry]
name = "eduflow"
version = "0.1.0"
description = ""
authors = ["Anton Tumashov <Tumashovster@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | env
  | \.env
  | migrations
  | __pycache__
)/
'''

[tool.flake8]
max-line-length = 119
extend-ignore = "E203,E266,W503,W504,C901"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    ".env",
    "migrations",
    "*/migrations/*",
    "*/venv/*",
    "*/site-packages/*",
    "**/venv/**",  # Рекурсивное исключение для Windows
    "**/.venv/**", # Рекурсивное исключение для Windows
]
per-file-ignores = [
    "*/settings.py:E501",
    "*/migrations/*:E501",
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
known_first_party = ["users", "materials"]
known_third_party = ["django", "rest_framework"]
skip = [".venv", "venv", "migrations"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rest_framework.*"
ignore_missing_imports = true